# time-to-bot

./: Cargo.toml  Dockerfile  LICENCE  README.md
src/: main.rs
src/events/: interaction_create.rs  mod.rs  ready.rs
